--- a/sample/ingress.yaml
+++ b/sample/ingress.yaml
@@ -4,6 +4,7 @@ metadata:
   name: test-ingress
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
+    azure/frontdoor: enabled
 spec:
   rules:
   - http:
